--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -7,18 +7,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <pl.droidsonroids.gif.GifImageView
+    <ImageView
         android:id="@+id/loading"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:background="@drawable/loading"
-        android:scaleType="centerCrop"
         android:contentDescription="@string/loading"
-        android:visibility="visible" />
+        android:scaleType="centerCrop"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
-    <include layout="@layout/layout_main"/>
+    <include
+        android:id="@+id/include"
+        layout="@layout/layout_main" />
     <ImageView
         android:id="@+id/image_pagecp"
         android:layout_width="47dp"
